# df-config

./: .env.default  Makefile  README.md  global_config.dev.yaml  global_env.aws_ec2_container.dev.env  global_env.aws_ec2_native.dev.env  global_env.aws_ecs_container.dev.env  global_env.on_prem_vm_native.dev.env  pyproject.toml
cfg/: global_config.dev.yaml
src/config/: settings.py
